# rust_perf

./: Cargo.toml
bench/nvidia/: RajaPerf-speedup-Average.csv  RajaPerf-timing-Average.csv
src/: lib.rs
src/RAJAPerf/: DEL_DOT_VEC_2D.rs  ENERGY.rs  FIR.rs  MASS3DEA.rs
src/apps/: convection3dpa.rs  del_dot_vec_2d.rs  energy.rs  fir.rs  ltimes.rs  mass3dea.rs  matvec_3d_stencil.rs  mod.rs  pressure.rs  vol3d.rs
src/base/: matmul.rs  multiple_kernel.rs  rocblas.rs  single_kernel.rs
src/common/: data_utils.rs  executor.rs  kernel_base.rs  mod.rs  timer.rs  types.rs
