[package]
name = "rust_perf"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = { version = "0.2.175", default-features = false }

[features]
default = ["all"]
all = ["energy", "fir", "del_dot_vec_2d", "mass3dea"]
energy = []
fir = []
del_dot_vec_2d = []
mass3dea = []

[profile.release]
lto = "fat"
panic = "abort"

[profile.dev]
lto = "fat"
panic = "abort"
