cargo-features = ["panic-immediate-abort"]

[package]
name = "rust_perf"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = { version = "0.2.175", default-features = false }

[features]
default = ["all", "f64"]
all = [
    "convection3dpa",
    "del_dot_vec_2d",
    "diffusion3dpa",
    "edge3d",
    "energy",
    "femsweep",
    "fir",
    "intsc_hexhex",
    "ltimes",
    "ltimes_noview",
    "mass3dea",
    "mass3dpa",
    "massvec3dpa",
    "matvec_3d_stencil",
    "nodal_accumulation_3d",
    "pressure",
    "vol3d",
    "zonal_accumulation_3d",
]
convection3dpa = []
del_dot_vec_2d = []
diffusion3dpa = []
edge3d = []
femsweep = []
energy = []
fir = []
intsc_hexhex = []
ltimes = []
ltimes_noview = []
mass3dea = []
mass3dpa = []
massvec3dpa = []
matvec_3d_stencil = []
nodal_accumulation_3d = []
pressure = []
vol3d = []
zonal_accumulation_3d = []
f64 = []
a64 = []

[profile.release]
lto = "fat"
panic = "abort"

[profile.dev]
lto = "fat"
panic = "abort"
